[build-system]
requires = ["setuptools >= 46.4.0", "wheel"]  # 46.4.0 - attr: for version
build-backend = "setuptools.build_meta"

##
## Tox
##

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
deps = .[test]
commands = pytest []
"""

##
## Pylint
##

[tool.pylint.master]
jobs = 0
persistent= "yes"
suggestion-mode = "yes"

[tool.pylint.messages_control]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "unnecessary-pass",
    "too-few-public-methods"
]

[tool.pylint.reports]
reports = "yes"
score = "yes"

[tool.pylint.logging]
logging-format-style = "new"
logging-modules = "logging"

[tool.pylint.variables]
allow-global-unused-variables = "yes"
init-import = "no"

[tool.pylint.format]
expected-line-ending-format = "LF"
max-line-length = 127

