[metadata]
name = twclient
version = attr: twclient.__version__
author = William Brannon
author_email = wbrannon@mit.edu
url = https://github.com/social-machines/twclient
description = A high-level analytics-focused client for the Twitter API
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE.rst
platform = any
keywords = twitter, tweepy, data science, analytics
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://social-machines.github.io/twclient
    Source Code = https://github.com/social-machines/twclient
    Bug Tracker = https://github.com/social-machines/twclient/issues
    Changelog = https://github.com/social-machines/twclient/blob/main/CHANGELOG.md

[options]
zip_safe = true
include_package_data = false
package_dir =
    =src
packages = twclient
install_requires =
    tweepy
    sqlalchemy

[options.entry_points]
console_scripts =
    twclient = twclient._cli.entrypoint:cli

[sdist]
formats = zip, gztar

[bdist_wheel]
universal = true

[options.extras_require]
docs =
    Sphinx
    recommonmark
    sphinx-rtd-theme

test =
    tox
    vcrpy
    pytest
    coverage

# test + either dev or ci

dev =
    # mypy
    pylint

    sphinx

    tox-pyenv

    psycopg2
    mysql-connector-python

ci =
    # mypy
    pylint
    codecov
    tox-gh-actions
