[metadata]
name = twclient
version = attr: twclient.__version__
author = William Brannon
author_email = wbrannon@mit.edu
url = https://github.com/social-machines/twclient
description = A high-level analytics-focused client for the Twitter API
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
license = Apache 2.0
license_file = LICENSE.rst
platform = any
keywords = twitter, tweepy, data science, analytics
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://social-machines.github.io/twclient
    Source Code = https://github.com/social-machines/twclient
    Bug Tracker = https://github.com/social-machines/twclient/issues
    Changelog = https://github.com/social-machines/twclient/blob/main/CHANGELOG.md

[options]
zip_safe = true
include_package_data = false
package_dir =
    =src
packages = twclient
install_requires =
    tweepy
    sqlalchemy<2.0.0
    packaging

[options.entry_points]
console_scripts =
    twclient = twclient._cli.entrypoint:cli

[sdist]
formats = zip, gztar

[bdist_wheel]
universal = true

[options.extras_require]
test =
    tox>=4.0.0
    vcrpy
    pytest
    coverage

lint =
    mypy
    pylint

check =
    %(test)s
    %(lint)s

ci =
    %(check)s
    codecov
    tox-gh-actions

docs =
    sphinx
    recommonmark
    sphinx-rtd-theme

dev =
    %(check)s
    %(docs)s

    tox-pyenv

    psycopg2
    mysql-connector-python
