[metadata]
name = twclient
version = attr: twclient._version.__version__
author = William Brannon
author_email = wbrannon@mit.edu
url = https://github.com/social-machines/twclient
description = A high-level analytics-focused client for the Twitter API
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
license = Apache 2.0
license_files = LICENSE.rst
platform = any
keywords = twitter, tweepy, data science, analytics
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source Code = https://github.com/mit-ccc/twclient
    Bug Tracker = https://github.com/mit-ccc/twclient/issues
    Changelog = https://github.com/mit-ccc/twclient/blob/main/CHANGELOG.md

    # FIXME this doc URL
    Documentation = https://social-machines.github.io/twclient

[options]
zip_safe = true
include_package_data = false
package_dir =
    =src
packages = twclient
python_requires = >=3.7
install_requires =
    tweepy
    sqlalchemy
    packaging

[options.entry_points]
console_scripts =
    twclient = twclient._cli.entrypoint:cli

[sdist]
formats = zip, gztar

[bdist_wheel]
universal = true

[options.extras_require]
test =
    tox>=4.0.0
    pytest
    vcrpy
    pytest-recording
    coverage

lint =
    mypy
    pylint

check =
    %(test)s
    %(lint)s

ci =
    %(check)s
    codecov
    tox-gh-actions

docs =
    sphinx>=4.3.0
    sphinx-rtd-theme>=1.2.0rc2
    recommonmark

dev =
    %(check)s
    %(docs)s

    psycopg2
    mysql-connector-python
